--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node src/index.ts --watch src",
+    "test": "jest --watch",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,13 @@
   "homepage": "https://github.com/raminrezazadeh/sample_intercom#readme",
   "devDependencies": {
     "@types/express": "4.17.2",
+    "@types/jest": "24.0.24",
+    "@types/node": "12.12.21",
+    "jest": "24.9.0",
+    "nodemon": "2.0.2",
+    "rimraf": "3.0.0",
+    "ts-jest": "24.2.0",
+    "ts-node": "8.5.4",
     "tslint": "5.20.1",
     "typescript": "3.7.4"
   },
